...
            android:gravity="center"
            android:orientation="vertical">



            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/add_term_header"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/termNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/add_term_name"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/termNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:importantForAutofill="no"
                android:inputType="text" />
            <TextView
                android:id="@+id/courses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/courses"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courseRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/addCourseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addCourseClick"
                android:text="@string/add_course_button"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
                android:gravity="center_vertical"/>
...
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/last_item_margin">

            <TextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" />

...

        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/addButtonFragmentContainer"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backButtonFragmentContainer"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
