...
            <FrameLayout
                android:id="@+id/backButtonFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/headerTitleCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/add_course_header"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/courseNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/course_name"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerTitle" />

            <EditText
                android:id="@+id/courseNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/enter_course_name_here"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courseNameView" />
            <TextView
                android:id="@+id/statusNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_margin_top"
                android:text="@string/status"
                android:textSize="@dimen/sub_header_text_size"
                android:textStyle="bold"
...
